// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IdeaPageComments /> it should a div with provided class name 1`] = `
<div
  className="idea__comments css-class"
>
  <CommentSection
    object={1}
    uri="ideas"
  />
</div>
`;

exports[`<IdeaPageComments /> it should render a comment section in a div 1`] = `
<div
  className="idea__comments "
>
  <CommentSection
    object={1}
    uri="ideas"
  />
</div>
`;
